--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('background.jpg');
+    background-image: url(' Hadiul.github.io/background.JPG');
     min-height: 100%;
 }
 
