--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body, html {
     </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
-  <p class="w3-wide"><i class="fa fa-camera"></i>Web Design</p>
+  <p class="w3-wide"><i class="fa fa-laptop"></i>Web Design</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
   </div>
@@ -109,7 +109,7 @@ body, html {
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
   </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i>Wordpress</p>
+  <p class="w3-wide"><i class="fa fa-laptop"></i>Wordpress</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">50%</div>
   </div>
