--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@ body, html {
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
   <p class="w3-wide"><i class="fa fa-laptop"></i>Web Design</p>
   <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
+    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">80%</div>
   </div>
   <p class="w3-wide"><i class="fa fa-laptop"></i>Web Development</p>
   <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
+    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">70%</div>
   </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i>Wordpress</p>
+  <p class="w3-wide"><i class="fa fa-laptop"></i>WordPress</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">50%</div>
   </div>
